better lining and data-l10n-id

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 		<div id="wrapper">
 
 <header id="masthead">
-        <a id="tabzilla" href="http://www.mozilla.org/" class="tabzilla-closed" role="button" aria-expanded="false" aria-controls="tabzilla-panel" title="Liens 
-
-Mozilla">Mozilla</a>
+        <a id="tabzilla" href="http://www.mozilla.org/" class="tabzilla-closed" role="button" aria-expanded="false" aria-controls="tabzilla-panel" title="Liens Mozilla">Mozilla</a>
 
                 <nav role="navigation" id="nav-main">
           <span tabindex="0" aria-controls="nav-main-menu" role="button" class="toggle">Menu</span>
@@ -145,16 +143,10 @@ Mozilla">Mozilla</a>
 </select>
             </div>
                     <div class="field field-format">
-            <label for="id_fmt_0"><input checked="checked" id="id_fmt_0" value="H" name="fmt" type="radio"> HTML</label><label for="id_fmt_1"><input id="id_fmt_1" 
-
-value="T" name="fmt" type="radio"> Text</label>
+            <label for="id_fmt_0"><input checked="checked" id="id_fmt_0" value="H" name="fmt" type="radio"> HTML</label><label for="id_fmt_1"><input id="id_fmt_1" value="T" name="fmt" type="radio"> Text</label>
           </div>
           <div class="field field-privacy ">
-            <label for="id_privacy" class="privacy-check-label"><input required="required" name="privacy" id="id_privacy" type="checkbox"> <span class="title"><span 
-
-data-l10n-id="agreement">I’m okay with you handling this info as you explain in your </span><a data-l10n-id="privacy-policy" href="http://www.mozilla.org/en-
-
-US/privacy-policy">Privacy Policy</a></span></label>
+            <label for="id_privacy" class="privacy-check-label"><input required="required" name="privacy" id="id_privacy" type="checkbox"> <span class="title"><span data-l10n-id="agreement">I’m okay with you handling this info as you explain in your </span><a data-l10n-id="privacy-policy" href="http://www.mozilla.org/en-US/privacy-policy">Privacy Policy</a></span></label>
           </div>
         </div>
       </div>
@@ -180,9 +172,7 @@ US/privacy-policy">Privacy Policy</a></span></label>
 
           <div class="footer-license">
               <p>
-                <span data-l10n-id="portions" >Portions of this content are ©1998–2013 by individual mozilla.org contributors. Content available under a</span> <a 
-
-href="http://www.mozilla.org/foundation/licensing/website-content.html" data-l10n-id="creative-licence">Creative Commons license</a>.              </p>
+                <span data-l10n-id="portions" >Portions of this content are ©1998–2013 by individual mozilla.org contributors. Content available under a</span> <a href="http://www.mozilla.org/foundation/licensing/website-content.html" data-l10n-id="creative-licence">Creative Commons license</a>.              </p>
               <p>
                 <a href="http://www.mozilla.org/en-US/contribute/page/" data-l10n-id="contribute-this-page">Contribute to this page</a>
               </p>
@@ -226,6 +216,4 @@ $(document).ready(function() {
 });
 </script>
   
-<div class="crossrider-nofity-14917" index="0"></div><div class="crossrider-nofity-14917-top-left"></div><div class="crossrider-nofity-14917-top-right"></div><div 
-
-class="crossrider-nofity-14917-bottom-left"></div><div class="crossrider-nofity-14917-bottom-right"></div></body></html>
+<div class="crossrider-nofity-14917" index="0"></div><div class="crossrider-nofity-14917-top-left"></div><div class="crossrider-nofity-14917-top-right"></div><div class="crossrider-nofity-14917-bottom-left"></div><div class="crossrider-nofity-14917-bottom-right"></div></body></html>
