--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!--[if lte IE 8]>
     <script src="//mozorg.cdn.mozilla.net/media/js/libs/html5shiv.js"></script>
     <![endif]-->
-
+    <link rel="resource" type="application/l10n" href="locales.ini" />
+    <script type="text/javascript" src="l10n.js"></script>
     <link rel="stylesheet" media="screen,projection,tv" href="style/css/firefox_fx-min.css">
     <link rel="shortcut icon" type="image/icon" href="img/favicon.ico">
     <script id="undefined" src="style/inpage_linkid.js" async="" type="text/javascript"></script>
