--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<option value="fr" data-l10n-id="c-fr">France</option>
 				<option value="gf" data-l10n-id="c-gf">French Guiana</option>
 				<option value="pf" data-l10n-id="c-pf">French Polynesia</option>
-				<option value="tf" data-l10n-id="tf">French Southern Territories</option>
+				<option value="tf" data-l10n-id="c-tf">French Southern Territories</option>
 				<option value="ga" data-l10n-id="c-ga">Gabon</option>
 				<option value="zw" data-l10n-id="c-zw">Zimbabwe</option>
 				<option value="ax" data-l10n-id="c-ax">Åland Islands</option>
