un peu d'esthétique sur l'entête des onglets

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 
 			<div id="main-pager" class="pager pager-with-tabs">
 				<ul class="pager-tabs pager-selected-mobile">
-					<li><a class="selected" href="#welcome">Welcome</a></li>
-					<li><a class="" href="#dev">Developper</a></li>
-					<li><a class="" href="#trad">Localization</a></li>
-					<li><a class="" href="#design">Design</a></li>
-					<li><a class="" href="#support">Support</a></li>
-					<li><a class="" href="#marketing">Marketing</a></li>
+					<li><a class="tab selected" href="#welcome">Welcome</a></li>
+					<li><a class="tab" href="#dev">Developper</a></li>
+					<li><a class="tab" href="#trad">Localization</a></li>
+					<li><a class="tab" href="#design">Design</a></li>
+					<li><a class="tab" href="#support">Support</a></li>
+					<li><a class="tab" href="#marketing">Marketing</a></li>
 				</ul>
 				<div class="billboard">
 					<div style="opacity: 1;" class="pager-content pager-selected-mobile">
