adding class due to merge conflict

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 			<div id="main-pager" class="pager pager-with-tabs">
 				<ul class="pager-tabs pager-selected-mobile">
 
-					<li><a class="selected" href="#welcome" data-l10n-id="welcome">Welcome</a></li>
-					<li><a class="" href="#dev" data-l10n-id="developer">Developper</a></li>
-					<li><a class="" href="#trad" data-l10n-id="localization">Localization</a></li>
-					<li><a class="" href="#design" data-l10n-id="design">Design</a></li>
-					<li><a class="" href="#support" data-l10n-id="support">Support</a></li>
-					<li><a class="" href="#marketing" data-l10n-id="marketing">Marketing</a></li>
+					<li><a class="tab selected" href="#welcome" data-l10n-id="welcome">Welcome</a></li>
+					<li><a class="tab" href="#dev" data-l10n-id="developer">Developper</a></li>
+					<li><a class="tab" href="#trad" data-l10n-id="localization">Localization</a></li>
+					<li><a class="tab" href="#design" data-l10n-id="design">Design</a></li>
+					<li><a class="tab" href="#support" data-l10n-id="support">Support</a></li>
+					<li><a class="tab" href="#marketing" data-l10n-id="marketing">Marketing</a></li>
 				</ul>
 				<div class="billboard">
 					<div style="opacity: 1;" class="pager-content pager-selected-mobile">
