ajouter une entête

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 	<div id="strings"></div>
 	<div id="outer-wrapper">
 		<div id="wrapper">
-
 <header id="masthead">
         <a id="tabzilla" href="http://www.mozilla.org/" class="tabzilla-closed" role="button" aria-expanded="false" aria-controls="tabzilla-panel" title="Liens Mozilla">Mozilla</a>
 
@@ -61,6 +60,19 @@
         
                 <h2><a href="https://www.mozilla.org/en-US/"><img alt="mozilla" src="img/header-mozilla-stone.png"></a></h2>        
       </header>
+
+<article id="moz15">
+
+  <div class="cta">
+    <h2>The success of our mission depends on participation from people like you.</h2>
+    <p>
+      Find out how you can get involved or support Mozilla to help make a 
+      difference in the lives of users everywhere for the next 15 years — and 
+      beyond.    
+    </p>
+  </div>
+
+</article>
 
 			<div id="main-pager" class="pager pager-with-tabs">
 				<ul class="pager-tabs pager-selected-mobile">
