corriger le lien de footer-mozilla.png

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
           <div class="footer-logo">
               <a href="http://www.mozilla.org/en-US/">
-              	<img src="style/footer-mozilla.png" alt="mozilla"></a>
+              	<img src="img/footer-mozilla.png" alt="mozilla"></a>
           </div>
 
           <div class="footer-license">
