--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <article id="moz15">
 
   <div class="cta">
-    <h2>The success of our mission depends on participation from people like you.</h2>
-    <p>
+    <h2 data-l10n-id="success-title">The success of our mission depends on participation from people like you.</h2>
+    <p data-l10n-id="success-description">
       Find out how you can get involved or support Mozilla to help make a 
       difference in the lives of users everywhere for the next 15 years — and 
       beyond.    
